# Traction_control

./: .env.example  .gitignore  README.MD  docker-compose.yml  package-lock.json  requirements.txt
ai-agents/: __init__.py  base_agent.py  claude_client.py  config.py  database.py  logging_config.py  main.py  orchestrator.py  requirements.txt
ai-agents/agents/: __init__.py  community_agent.py  discord_agent.py  email_agent.py  forum_agent.py  telegram_agent.py
smart-contract/: Anchor.toml  Cargo.toml  get-program-id.js  package-lock.json  package.json
smart-contract/programs/repescrow/: Cargo.toml
smart-contract/programs/repescrow/src/: error.rs  lib.rs  state.rs
smart-contract/programs/repescrow/src/instructions/: create_escrow.rs  create_profile.rs  fund_escrow.rs  initialize_platform.rs  mod.rs  open_dispute.rs  refund.rs  release_payment.rs  resolve_dispute.rs  stake.rs  submit_work.rs  unstake.rs
smart-contract/tests/: repescrow.ts
web-app/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/app/api/escrow/: route.ts
web-app/src/app/api/profile/: route.ts
web-app/src/app/dashboard/: page.tsx
web-app/src/app/escrow/[id]/: page.tsx
web-app/src/app/settings/: page.tsx
web-app/src/app/vendors/: page.tsx
web-app/src/components/layout/: Navbar.tsx  WalletProvider.tsx
web-app/src/hooks/: useCreateEscrow.ts  useProgram.ts  useUserProfile.ts
web-app/src/idl/: repescrow.json
web-app/src/lib/: constants.ts  program.ts  supabase.ts
(+1 files in other folders)
